--- a/EvaluacionProveedores/src/Frontera/Principal.form
+++ b/EvaluacionProveedores/src/Frontera/Principal.form
@@ -33,7 +33,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="30" max="32767" attributes="0"/>
+              <EmptySpace pref="13" max="32767" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
           </Group>
@@ -51,11 +51,11 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="btnContratar" alignment="0" pref="143" max="32767" attributes="1"/>
-                              <Component id="btnAdministrar" alignment="0" pref="143" max="32767" attributes="1"/>
                               <Component id="btnEvaluar" alignment="0" pref="143" max="32767" attributes="1"/>
                               <Component id="btnGenerar" alignment="0" pref="143" max="32767" attributes="1"/>
                               <Component id="btnGestor" alignment="0" max="32767" attributes="1"/>
+                              <Component id="btnContratar" alignment="0" pref="143" max="32767" attributes="1"/>
+                              <Component id="btnAdministrar" alignment="1" pref="143" max="32767" attributes="1"/>
                           </Group>
                           <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
                       </Group>
@@ -87,10 +87,10 @@
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                   <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="btnContratar" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   <Component id="btnAdministrar" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="btnContratar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnEvaluar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
